open terminal and hold